Add "Pss" and "SwapPss" to the process monitoring parameters
And reformat, close many Eclipse warnings and so on