@@ -1,14 +1,14 @@
 /*
  * ApMon - Application Monitoring Tool
- * Version: 2.2.7
+ * Version: 2.2.8
  *
  * Copyright (C) 2006 - 2010 California Institute of Technology
  *
- * Permission is hereby granted, free of charge, to use, copy and modify 
+ * Permission is hereby granted, free of charge, to use, copy and modify
  * this software and its documentation (the "Software") for any
- * purpose, provided that existing copyright notices are retained in 
+ * purpose, provided that existing copyright notices are retained in
  * all copies and that this notice is included verbatim in any distributions
- * or substantial portions of the Software. 
+ * or substantial portions of the Software.
  * This software is a part of the MonALISA framework (http://monalisa.caltech.edu).
  * Users of the Software are asked to feed back problems, benefits,
  * and/or suggestions about the software to the MonALISA Development Team
@@ -16,12 +16,12 @@
  * incorporation of new features - is done on a best effort basis. All bug
  * fixes and enhancements will be made available under the same terms and
  * conditions as the original software,
- 
+ * 
  * IN NO EVENT SHALL THE AUTHORS OR DISTRIBUTORS BE LIABLE TO ANY PARTY FOR
  * DIRECT, INDIRECT, SPECIAL, INCIDENTAL, OR CONSEQUENTIAL DAMAGES ARISING OUT
  * OF THE USE OF THIS SOFTWARE, ITS DOCUMENTATION, OR ANY DERIVATIVES THEREOF,
  * EVEN IF THE AUTHORS HAVE BEEN ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
- 
+ * 
  * THE AUTHORS AND DISTRIBUTORS SPECIFICALLY DISCLAIM ANY WARRANTIES,
  * INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE, AND NON-INFRINGEMENT. THIS SOFTWARE IS
@@ -32,7 +32,9 @@
 
 package apmon;
 
+import java.io.BufferedReader;
 import java.io.File;
+import java.io.FileReader;
 import java.io.IOException;
 import java.util.HashMap;
 import java.util.StringTokenizer;
@@ -89,7 +91,7 @@ public class MonitoredJob {
 	 * @return disk usage
 	 */
 	public HashMap<Long, Double> readJobDiskUsage() {
-		HashMap<Long, Double> hm = new HashMap<Long, Double>();
+		HashMap<Long, Double> hm = new HashMap<>();
 		String cmd = null, aux = null, result = null;
 		double workdir_size = 0.0, disk_total = 0.0, disk_used = 0.0, disk_free = 0.0, disk_usage = 0.0;
 
@@ -99,29 +101,29 @@ public class MonitoredJob {
 		cmd = "du -Lscm " + workDir + " | tail -1 | cut -f 1";
 		result = exec.executeCommandReality(cmd, "");
 		workdir_size = Double.parseDouble(result);
-		hm.put(ApMonMonitoringConstants.LJOB_WORKDIR_SIZE, new Double(workdir_size));
+		hm.put(ApMonMonitoringConstants.LJOB_WORKDIR_SIZE, Double.valueOf(workdir_size));
 
 		cmd = "df -P -m " + workDir + " | tail -1";
 		result = exec.executeCommand(cmd, "");
 		final StringTokenizer st = new StringTokenizer(result, " \t%");
-		
-		st.nextToken();	// skip over the filesystem name
+
+		st.nextToken(); // skip over the filesystem name
 
 		aux = st.nextToken();
 		disk_total = Double.parseDouble(aux);
-		hm.put(ApMonMonitoringConstants.LJOB_DISK_TOTAL, new Double(disk_total));
+		hm.put(ApMonMonitoringConstants.LJOB_DISK_TOTAL, Double.valueOf(disk_total));
 
 		aux = st.nextToken();
 		disk_used = Double.parseDouble(aux);
-		hm.put(ApMonMonitoringConstants.LJOB_DISK_USED, new Double(disk_used));
+		hm.put(ApMonMonitoringConstants.LJOB_DISK_USED, Double.valueOf(disk_used));
 
 		aux = st.nextToken();
 		disk_free = Double.parseDouble(aux);
-		hm.put(ApMonMonitoringConstants.LJOB_DISK_FREE, new Double(disk_free));
+		hm.put(ApMonMonitoringConstants.LJOB_DISK_FREE, Double.valueOf(disk_free));
 
 		aux = st.nextToken();
 		disk_usage = Double.parseDouble(aux);
-		hm.put(ApMonMonitoringConstants.LJOB_DISK_USAGE, new Double(disk_usage));
+		hm.put(ApMonMonitoringConstants.LJOB_DISK_USAGE, Double.valueOf(disk_usage));
 
 		return hm;
 	}
@@ -135,7 +137,7 @@ public class MonitoredJob {
 		int nProcesses = 0, nChildren = 1;
 		int i, j;
 
-		cmd = "ps --no-headers -eo ppid,pid";
+		cmd = "ps -eo ppid,pid";
 		result = exec.executeCommandReality(cmd, "");
 		boolean pidFound = false;
 		if (result == null) {
@@ -144,11 +146,15 @@ public class MonitoredJob {
 		}
 
 		StringTokenizer st = new StringTokenizer(result, " \n");
-		nProcesses = st.countTokens() / 2;
+		nProcesses = st.countTokens() / 2 - 1;
 
-		pids = new Vector<Integer>();
-		ppids = new Vector<Integer>();
-		children = new Vector<Integer>();
+		// Skip over the header line with its two tokens
+		st.nextToken();
+		st.nextToken();
+
+		pids = new Vector<>();
+		ppids = new Vector<>();
+		children = new Vector<>();
 		children.add(Integer.valueOf(pid));
 		while (st.hasMoreTokens()) {
 			i = Integer.parseInt(st.nextToken());
@@ -189,7 +195,7 @@ public class MonitoredJob {
 	public static long parsePSTime(String s) {
 		long days, hours, mins, secs;
 		if (s.indexOf('-') > 0) {
-			StringTokenizer st = new StringTokenizer(s, "-:");
+			StringTokenizer st = new StringTokenizer(s, "-:.");
 			days = Long.parseLong(st.nextToken());
 			hours = Long.parseLong(st.nextToken());
 			mins = Long.parseLong(st.nextToken());
@@ -197,7 +203,7 @@ public class MonitoredJob {
 			return 24 * 3600 * days + 3600 * hours + 60 * mins + secs;
 		}
 		if (s.indexOf(':') > 0 && s.indexOf(':') != s.lastIndexOf(':')) {
-			StringTokenizer st = new StringTokenizer(s, ":");
+			StringTokenizer st = new StringTokenizer(s, ":.");
 			hours = Long.parseLong(st.nextToken());
 			mins = Long.parseLong(st.nextToken());
 			secs = Long.parseLong(st.nextToken());
@@ -205,7 +211,7 @@ public class MonitoredJob {
 		}
 
 		if (s.indexOf(':') > 0) {
-			StringTokenizer st = new StringTokenizer(s, ":");
+			StringTokenizer st = new StringTokenizer(s, ":.");
 			mins = Long.parseLong(st.nextToken());
 			secs = Long.parseLong(st.nextToken());
 			return 60 * mins + secs;
@@ -220,7 +226,7 @@ public class MonitoredJob {
 	 */
 	public HashMap<Long, Double> readJobInfo() throws IOException {
 		Vector<Integer> children;
-		HashMap<Long, Double> ret = new HashMap<Long, Double>();
+		HashMap<Long, Double> ret = new HashMap<>();
 		String cmd = null, result = null;
 		String line = null;
 
@@ -238,10 +244,10 @@ public class MonitoredJob {
 
 		/*
 		 * this list contains strings of the form "rsz_vsz_command" for every pid; it is used to avoid adding several times processes that have multiple threads and appear in ps as
-		 * sepparate processes, occupying exactly the same amount of memory and having the same command name. For every line from the output of the ps command we verify if the
+		 * separate processes, occupying exactly the same amount of memory and having the same command name. For every line from the output of the ps command we verify if the
 		 * rsz_vsz_command combination is already in the list.
 		 */
-		Vector<String> mem_cmd_list = new Vector<String>();
+		Vector<String> mem_cmd_list = new Vector<>();
 
 		/* get the list of the process' descendants */
 		children = getChildren();
@@ -252,110 +258,181 @@ public class MonitoredJob {
 		logger.fine("Number of children for process " + pid + ": " + children.size());
 
 		/* issue the "ps" command to obtain information on all the descendants */
-		cmd = "ps --no-headers --pid ";
+		cmd = "ps -p ";
 		for (i = 0; i < children.size() - 1; i++)
 			cmd = cmd + children.elementAt(i) + ",";
 		cmd = cmd + children.elementAt(children.size() - 1);
 
-		cmd = cmd + " -o pid,etime,time,%cpu,%mem,rsz,vsz,comm";
+		cmd = cmd + " -o pid,etime,time,%cpu,%mem,rss,vsz,comm";
 		result = exec.executeCommandReality(cmd, "");
+
+		// skip over the first line of the `ps` output
+		int idx = result.indexOf('\n');
+
+		if (idx > 0)
+			result = result.substring(idx + 1);
 
 		StringTokenizer rst = new StringTokenizer(result, "\n");
 		while (rst.hasMoreTokens()) {
 			line = rst.nextToken();
-			StringTokenizer st = new StringTokenizer(line, " \t");
+			try {
+				StringTokenizer st = new StringTokenizer(line, " \t");
 
-			apid = Long.parseLong(st.nextToken());
-			_etime = parsePSTime(st.nextToken());
-			_cputime = parsePSTime(st.nextToken());
-			_pcpu = Double.parseDouble(st.nextToken());
-			_pmem = Double.parseDouble(st.nextToken());
-			_rsz = Double.parseDouble(st.nextToken());
-			_vsz = Double.parseDouble(st.nextToken());
-			String cmdName = st.nextToken();
+				apid = Long.parseLong(st.nextToken());
+				_etime = parsePSTime(st.nextToken());
+				_cputime = parsePSTime(st.nextToken());
+				_pcpu = Double.parseDouble(st.nextToken());
+				_pmem = Double.parseDouble(st.nextToken());
+				_rsz = Double.parseDouble(st.nextToken());
+				_vsz = Double.parseDouble(st.nextToken());
+				String cmdName = st.nextToken();
 
-			etime = etime > _etime ? etime : _etime;
-			cputime += _cputime;
-			pcpu += _pcpu;
+				etime = etime > _etime ? etime : _etime;
+				cputime += _cputime;
+				pcpu += _pcpu;
 
-			String mem_cmd_s = "" + _rsz + "_" + _vsz + "_" + cmdName;
-			// mem_cmd_list.add(mem_cmd_s);
-			if (mem_cmd_list.indexOf(mem_cmd_s) == -1) {
-				pmem += _pmem;
-				vsz += _vsz;
-				rsz += _rsz;
-				mem_cmd_list.add(mem_cmd_s);
-				long _fd = countOpenFD(apid);
-				if (_fd != -1)
-					fd += _fd;
+				String mem_cmd_s = "" + _rsz + "_" + _vsz + "_" + cmdName;
+				// mem_cmd_list.add(mem_cmd_s);
+				if (mem_cmd_list.indexOf(mem_cmd_s) == -1) {
+					pmem += _pmem;
+					vsz += _vsz;
+					rsz += _rsz;
+					mem_cmd_list.add(mem_cmd_s);
+					long _fd = countOpenFD(apid);
+					if (_fd != -1)
+						fd += _fd;
+				}
+			}
+			catch (final Exception e) {
+				System.err.println("Exception parsing line `" + line + "` of the output of `" + cmd + "`: " + e.getMessage());
+				e.printStackTrace();
 			}
 		}
 
-		ret.put(ApMonMonitoringConstants.LJOB_RUN_TIME, new Double(etime));
-		ret.put(ApMonMonitoringConstants.LJOB_CPU_TIME, new Double(cputime));
-		ret.put(ApMonMonitoringConstants.LJOB_CPU_USAGE, new Double(pcpu));
-		ret.put(ApMonMonitoringConstants.LJOB_MEM_USAGE, new Double(pmem));
-		ret.put(ApMonMonitoringConstants.LJOB_RSS, new Double(rsz));
-		ret.put(ApMonMonitoringConstants.LJOB_VIRTUALMEM, new Double(vsz));
-		ret.put(ApMonMonitoringConstants.LJOB_OPEN_FILES, new Double(fd));
+		double pssKB = 0;
+		double swapPssKB = 0;
+		
+		for (Integer child: children) {
+			File f = new File("/proc/"+child+"/smaps");
+			
+			if (f.exists() && f.canRead()) {
+				try (BufferedReader br = new BufferedReader(new FileReader(f))){					
+					String s;
+					
+					while ( (s=br.readLine())!=null ) {
+						// File content is something like this (the keys that we are missing from the `ps` output only):
+						// Pss:                  16 kB
+						// SwapPss:               0 kB
+						if (s.startsWith("Pss:") || s.startsWith("SwapPss:")) {
+							final StringTokenizer st = new StringTokenizer(s);
+							
+							if (st.countTokens()==3) {
+								st.nextToken();
+								try {
+									long value = Long.parseLong(st.nextToken());
+									
+									if (s.startsWith("S"))
+										swapPssKB += value;
+									else
+										pssKB += value;
+								}
+								catch (@SuppressWarnings("unused") final NumberFormatException nfe) {
+									// ignore
+								}
+							}
+						}
+					}
+				}
+				catch (@SuppressWarnings("unused") final IOException ioe) {
+					// ignore
+				}
+			}
+		}
+		
+		ret.put(ApMonMonitoringConstants.LJOB_RUN_TIME, Double.valueOf(etime));
+		ret.put(ApMonMonitoringConstants.LJOB_CPU_TIME, Double.valueOf(cputime));
+		ret.put(ApMonMonitoringConstants.LJOB_CPU_USAGE, Double.valueOf(pcpu));
+		ret.put(ApMonMonitoringConstants.LJOB_MEM_USAGE, Double.valueOf(pmem));
+		ret.put(ApMonMonitoringConstants.LJOB_RSS, Double.valueOf(rsz));
+		ret.put(ApMonMonitoringConstants.LJOB_VIRTUALMEM, Double.valueOf(vsz));
+		ret.put(ApMonMonitoringConstants.LJOB_OPEN_FILES, Double.valueOf(fd));
+		
+		if (pssKB == 0 && rsz > 0) {
+			// fake the PSS values if they are not supported, assuming that
+			// PSS == RSS and SwapPSS = Virtual - RSS
+			
+			pssKB = rsz;
+			swapPssKB = vsz - rsz;
+		}
+		
+		ret.put(ApMonMonitoringConstants.LJOB_PSS, Double.valueOf(pssKB));
+		ret.put(ApMonMonitoringConstants.LJOB_SWAPPSS, Double.valueOf(swapPssKB));
 
 		return ret;
 	}
 
-	/** count the number of open files for the given pid 
-	 * @param processid 
-	 * @return opened file descriptors */
+	/**
+	 * count the number of open files for the given pid
+	 * 
+	 * @param processid
+	 * @return opened file descriptors
+	 */
 	public static long countOpenFD(final long processid) {
-		
+
 		long open_files;
 		int mypid = ApMon.getPID();
 		String dir = "/proc/" + processid + "/fd";
 		File f = new File(dir);
-		if(f.exists()){
-			if(f.canRead()){
+		if (f.exists()) {
+			if (f.canRead()) {
 				open_files = (f.list()).length - 2;
-				if(processid == mypid)
+				if (processid == mypid)
 					open_files -= 2;
 				logger.log(Level.FINE, "Counting open_files for process " + processid);
-			}else{
+			}
+			else {
 				open_files = -1;
 				logger.log(Level.SEVERE, "ProcInfo: cannot count the number of opened files for job" + processid);
 			}
-		}else{
+		}
+		else {
 			open_files = -1;
 			logger.log(Level.SEVERE, "ProcInfo: job " + processid + "not exist.");
-		}	
+		}
 		return open_files;
 	}
-
 
 	@Override
 	public String toString() {
 		return "[" + pid + "]" + " " + workDir + " " + " " + clusterName + " " + nodeName;
 	}
 
-	/* (non-Javadoc)
+	/*
+	 * (non-Javadoc)
+	 * 
 	 * @see java.lang.Object#equals(java.lang.Object)
 	 */
 	@Override
 	public boolean equals(final Object obj) {
-		if (obj==null)
+		if (obj == null)
 			return false;
-		
-		if (! (obj instanceof MonitoredJob))
+
+		if (!(obj instanceof MonitoredJob))
 			return false;
-		
+
 		final MonitoredJob other = (MonitoredJob) obj;
-		
-		return pid==other.pid && clusterName.equals(other.clusterName) && nodeName.equals(other.nodeName);
+
+		return pid == other.pid && clusterName.equals(other.clusterName) && nodeName.equals(other.nodeName);
 	}
-	
-	/* (non-Javadoc)
+
+	/*
+	 * (non-Javadoc)
+	 * 
 	 * @see java.lang.Object#hashCode()
 	 */
 	@Override
 	public int hashCode() {
-		return 13*pid + 19*clusterName.hashCode() + 31*nodeName.hashCode();
+		return 13 * pid + 19 * clusterName.hashCode() + 31 * nodeName.hashCode();
 	}
-	
+
 }
