@@ -1,7 +1,6 @@
 package apmon.lisa_host;
 
 import java.io.BufferedReader;
-import java.io.FileReader;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.util.Date;
@@ -18,16 +17,16 @@ public class cmdExec {
 	private String osname;
 	private String exehome = "";
 	private long timeout = 60 * 1000; // 1 min
-	
+
 	private LinkedList<StreamGobbler> streams = null;
 	private LinkedList<StreamRealGobbler> streamsReal = null;
-	
+
 	private boolean isError = false;
 
 	/* These variables are set to true when we want to destroy the streams pool */
 	private boolean stopStreams = false;
 	private boolean stopStreamsReal = false;
-	
+
 	/**
 	 * 
 	 */
@@ -38,12 +37,14 @@ public class cmdExec {
 		double dd = -1.0;
 		try {
 			dd = Double.parseDouble(tot);
-		} catch (Exception e) {
+		}
+		catch (@SuppressWarnings("unused") Exception e) {
 			dd = -1.0;
 		}
-		if (dd >= 0.0) timeout = (long)(dd * 1000);
-		streams = new LinkedList<StreamGobbler>();
-		streamsReal = new LinkedList<StreamRealGobbler>();
+		if (dd >= 0.0)
+			timeout = (long) (dd * 1000);
+		streams = new LinkedList<>();
+		streamsReal = new LinkedList<>();
 	}
 
 	/**
@@ -52,12 +53,12 @@ public class cmdExec {
 	public void setCmd(String cmd) {
 		full_cmd = cmd; // local
 	}
-	
+
 	/**
 	 * @param timeout
 	 */
 	public void setTimeout(long timeout) {
-		
+
 		this.timeout = timeout;
 	}
 
@@ -69,33 +70,32 @@ public class cmdExec {
 		try {
 
 			if (osname.startsWith("Linux") || osname.startsWith("Mac")) {
-				pro =
-					Runtime.getRuntime().exec(
-						new String[] { "/bin/sh", "-c", cmd });
-			} else if (osname.startsWith("Windows")) {
-				pro = Runtime.getRuntime().exec(exehome + cmd);
+				pro = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c", cmd });
 			}
+			else
+				if (osname.startsWith("Windows")) {
+					pro = Runtime.getRuntime().exec(exehome + cmd);
+				}
 
 			InputStream out = pro.getInputStream();
 			BufferedReader br = new BufferedReader(new InputStreamReader(out));
-			BufferedReader err = new BufferedReader(new InputStreamReader(pro.getErrorStream()));
-			
-			String buffer = "";
-			String ret = "";
-			while((buffer = err.readLine())!= null) {
-				ret += buffer+"\n'";
-			}
-			
-			err.close();
-			
-			if (ret.length() != 0){
-				return null;
-			}
-			
-			return br;
 
-		} catch (Exception e) {
-			System.out.println("FAILED to execute cmd = " + exehome + cmd);
+			try (BufferedReader err = new BufferedReader(new InputStreamReader(pro.getErrorStream()))) {
+				String buffer = "";
+				String ret = "";
+				while ((buffer = err.readLine()) != null) {
+					ret += buffer + "\n'";
+				}
+
+				if (ret.length() != 0) {
+					return null;
+				}
+			}
+
+			return br;
+		}
+		catch (Exception e) {
+			System.out.println("FAILED to execute cmd = " + exehome + cmd + ": " + e.getMessage());
 			Thread.currentThread().interrupt();
 		}
 
@@ -110,33 +110,29 @@ public class cmdExec {
 
 		try {
 
-			pro =
-				Runtime.getRuntime().exec(
-					new String[] { "/bin/sh", "-c", exehome + cmd});
-//			System.out.println("/bin/sh -c "+exehome + cmd);
+			pro = Runtime.getRuntime().exec(new String[] { "/bin/sh", "-c", exehome + cmd });
+			// System.out.println("/bin/sh -c "+exehome + cmd);
 			InputStream out = pro.getInputStream();
 			BufferedReader br = new BufferedReader(new InputStreamReader(out));
 
-			BufferedReader err = new BufferedReader(new InputStreamReader(pro.getErrorStream()));
-			
-			String buffer = "";
-			String ret = "";
-			while((buffer = err.readLine())!= null) {
-				ret += buffer+"\n'";
+			try (BufferedReader err = new BufferedReader(new InputStreamReader(pro.getErrorStream()))) {
+				String buffer = "";
+				String ret = "";
+				while ((buffer = err.readLine()) != null) {
+					ret += buffer + "\n'";
+				}
+
+				if (ret.length() != 0) {
+					// System.out.println(ret);
+					return null;
+				}
 			}
-			
-			err.close();
-			
-			if (ret.length() != 0){
-//				System.out.println(ret);
-				return null;
-			}
-			
-			
+
 			return br;
 
-		} catch (Exception e) {
-			System.out.println("FAILED to execute cmd = " + exehome + cmd);
+		}
+		catch (Exception e) {
+			System.out.println("FAILED to execute cmd = " + exehome + cmd + ": " + e.getMessage());
 			Thread.currentThread().interrupt();
 		}
 
@@ -154,126 +150,116 @@ public class cmdExec {
 	}
 
 	/**
-	 * @param filePath
-	 * @return read proc contents
-	 */
-	public BufferedReader readProc(String filePath) {
-
-		try {
-			return new BufferedReader(new FileReader(filePath));
-		} catch (Exception e) {
-
-			return null;
-		}
-	}
-	
-	/**
 	 * @return true if error
 	 */
 	public boolean isError() {
-		
+
 		return isError;
 	}
-	
+
 	/**
 	 * @param command
 	 * @param expect
 	 * @return output
 	 */
 	public String executeCommand(String command, String expect) {
-		
+
 		StreamGobbler output = null;
 		StreamGobbler error = null;
-		
-		try
-		{            
-			String osName = System.getProperty("os.name" );
+
+		try {
+			String osName = System.getProperty("os.name");
 			Process proc = null;
 
 			if (osName.indexOf("Win") != -1) {
 				proc = Runtime.getRuntime().exec(command);
-			} else if (osName.indexOf("Linux") != -1 || osName.indexOf("Mac") != -1) {
-				String[] cmd = new String[3];
-				cmd[0] = "/bin/sh";
-				cmd[1] = "-c";
-				cmd[2] = command;
-				proc = Runtime.getRuntime().exec(cmd);
-			} else {
-				isError = true;
-				return null; 
 			}
-			
+			else
+				if (osName.indexOf("Linux") != -1 || osName.indexOf("Mac") != -1) {
+					String[] cmd = new String[3];
+					cmd[0] = "/bin/sh";
+					cmd[1] = "-c";
+					cmd[2] = command;
+					proc = Runtime.getRuntime().exec(cmd);
+				}
+				else {
+					isError = true;
+					return null;
+				}
+
 			error = getStreamGobbler();
 			output = getStreamGobbler();
-			
+
 			// any error message?
-			error.setInputStream(proc.getErrorStream());            
-			
+			error.setInputStream(proc.getErrorStream());
+
 			// any output?
 			output.setInputStream(proc.getInputStream());
-			
+
 			String out = "";
-			
+
 			// any error???
-				long startTime = new Date().getTime();
-				while (true) {
-					out = error.getOutput();
-					try {
-						if (!out.equals("") && proc.exitValue() != 0) {
-							isError = true;
-							break;
-						}
-					} catch (IllegalThreadStateException ex) {
-						// ignore
-					}
-					if (expect != null) {
-						out = output.getOutput();
-						if (out != "" && out.indexOf(expect) != -1) {
-							isError = false;
-							break;
-						}
-					}
-					long endTime = new Date().getTime();
-					if (endTime - startTime > timeout) {
+			long startTime = new Date().getTime();
+			while (true) {
+				out = error.getOutput();
+				try {
+					if (!out.equals("") && proc.exitValue() != 0) {
 						isError = true;
 						break;
 					}
-					Thread.sleep(100);
 				}
-			
+				catch (@SuppressWarnings("unused") IllegalThreadStateException ex) {
+					// ignore
+				}
+				if (expect != null) {
+					out = output.getOutput();
+					if (out != "" && out.indexOf(expect) != -1) {
+						isError = false;
+						break;
+					}
+				}
+				long endTime = new Date().getTime();
+				if (endTime - startTime > timeout) {
+					isError = true;
+					break;
+				}
+				Thread.sleep(100);
+			}
+
 			proc.destroy();
 			proc.waitFor();
 
 			if (out.equals(""))
 				out = output.getOutput();
-			
-//			String ret = "";
-//			
-//			if (!error.getOutput().equals(""))
-//				ret = error.getOutput();
-//			
-//			ret = output.getOutput();
-			
+
+			// String ret = "";
+			//
+			// if (!error.getOutput().equals(""))
+			// ret = error.getOutput();
+			//
+			// ret = output.getOutput();
+
 			error.stopIt();
 			output.stopIt();
-			
+
 			addStreamGobbler(error);
 			addStreamGobbler(output);
-			
-			error =  null;
+
+			error = null;
 			output = null;
-			
+
 			return out;
-			
-		} catch (Exception e) {
+
+		}
+		catch (Exception e) {
 			e.printStackTrace();
-			
+
 			if (error != null) {
 				addStreamGobbler(error);
 				error.stopIt();
 				error = null;
 			}
-			
+
 			if (output != null) {
 				addStreamGobbler(output);
 				output.stopIt();
@@ -283,7 +269,6 @@ public class cmdExec {
 			return "";
 		}
 	}
-	
 
 	/**
 	 * @param command
@@ -292,38 +277,40 @@ public class cmdExec {
 	 * @return output
 	 */
 	public String executeCommand(String command, String expect, int howManyTimes) {
-		
+
 		StreamGobbler output = null;
 		StreamGobbler error = null;
 		int nr = 0; // how many times the expect string occured
-		
-		try
-		{            
-			String osName = System.getProperty("os.name" );
+
+		try {
+			String osName = System.getProperty("os.name");
 			Process proc = null;
 
 			if (osName.indexOf("Win") != -1) {
 				proc = Runtime.getRuntime().exec(command);
-			} else if (osName.indexOf("Linux") != -1 || osName.indexOf("Mac") != -1) {
-				String[] cmd = new String[3];
-				cmd[0] = "/bin/sh";
-				cmd[1] = "-c";
-				cmd[2] = command;
-				proc = Runtime.getRuntime().exec(cmd);
-			} else {
-				isError = true;
-				return null; 
 			}
-			
+			else
+				if (osName.indexOf("Linux") != -1 || osName.indexOf("Mac") != -1) {
+					String[] cmd = new String[3];
+					cmd[0] = "/bin/sh";
+					cmd[1] = "-c";
+					cmd[2] = command;
+					proc = Runtime.getRuntime().exec(cmd);
+				}
+				else {
+					isError = true;
+					return null;
+				}
+
 			error = getStreamGobbler();
 			output = getStreamGobbler();
-			
-			error.setInputStream(proc.getErrorStream());            
-			
+
+			error.setInputStream(proc.getErrorStream());
+
 			output.setInputStream(proc.getInputStream());
-			
+
 			String out = "";
-			
+
 			long startTime = new Date().getTime();
 			while (true) {
 				out = error.getOutput();
@@ -332,7 +319,8 @@ public class cmdExec {
 						isError = true;
 						break;
 					}
-				} catch (IllegalThreadStateException ex) { 
+				}
+				catch (@SuppressWarnings("unused") IllegalThreadStateException ex) {
 					// ignore
 				}
 				if (expect != null) {
@@ -352,33 +340,34 @@ public class cmdExec {
 				}
 				Thread.sleep(100);
 			}
-			
+
 			proc.destroy();
 			proc.waitFor();
 
 			if (out.equals(""))
 				out = output.getOutput();
-			
+
 			error.stopIt();
 			output.stopIt();
-			
+
 			addStreamGobbler(error);
 			addStreamGobbler(output);
-			
-			error =  null;
+
+			error = null;
 			output = null;
-			
+
 			return out;
-			
-		} catch (Exception e) {
+
+		}
+		catch (Exception e) {
 			e.printStackTrace();
-			
+
 			if (error != null) {
 				addStreamGobbler(error);
 				error.stopIt();
 				error = null;
 			}
-			
+
 			if (output != null) {
 				addStreamGobbler(output);
 				output.stopIt();
@@ -388,61 +377,67 @@ public class cmdExec {
 			return "";
 		}
 	}
-	
+
 	/**
 	 * @param text
 	 * @param token
 	 * @return occurrences
 	 */
-	protected int getStringOccurences(String text, String token) {
-		
-		if (text.indexOf(token) < 0) return 0;
+	protected static int getStringOccurences(String text, String token) {
+
+		if (text.indexOf(token) < 0)
+			return 0;
 		int nr = 0;
 		String str = text;
 		while (str.indexOf(token) >= 0) {
-			str = str.substring(str.indexOf(token)+token.length());
+			str = str.substring(str.indexOf(token) + token.length());
 			nr++;
 		}
 		return nr;
 	}
-	
-	/** cipsm ->  new execute command - it shows the output exactly as it is, by lines 
-	 * @param command 
-	 * @param expect 
-	 * @return command output*/
+
+	/**
+	 * cipsm -> new execute command - it shows the output exactly as it is, by lines
+	 * 
+	 * @param command
+	 * @param expect
+	 * @return command output
+	 */
 	public String executeCommandReality(String command, String expect) {
 
 		StreamRealGobbler error = null;
 		StreamRealGobbler output = null;
-		try
-		{            
-			String osName = System.getProperty("os.name" );
+		try {
+			String osName = System.getProperty("os.name");
 			Process proc = null;
 
-			if (osName.indexOf("Win") != -1) {
+			if (osName.contains("Win")) {
 				proc = Runtime.getRuntime().exec(command);
-			} else if (osName.indexOf("Linux") != -1) {
-				String[] cmd = new String[3];
-				cmd[0] = "/bin/sh";
-				cmd[1] = "-c";
-				cmd[2] = command;
-				proc = Runtime.getRuntime().exec(cmd);
-			} else {
-				isError = true;
-				return null; 
 			}
-			
+			else
+				if (osName.contains("Linux") || osName.contains("Mac OS X")) {
+					String[] cmd = new String[3];
+					cmd[0] = "/bin/sh";
+					cmd[1] = "-c";
+					cmd[2] = command;
+					proc = Runtime.getRuntime().exec(cmd);
+				}
+				else {
+					isError = true;
+					return null;
+				}
+
 			error = getStreamRealGobbler();
 			output = getStreamRealGobbler();
-			
+
 			// any error message?
-			error.setInputStream(proc.getErrorStream());            
-			
+			error.setInputStream(proc.getErrorStream());
+
 			// any output?
 			output.setInputStream(proc.getInputStream());
-			
+
 			String out = "";
-			
+
 			// any error???
 			long startTime = new Date().getTime();
 			while (true) {
@@ -452,7 +447,8 @@ public class cmdExec {
 						isError = true;
 						break;
 					}
-				} catch (IllegalThreadStateException ex) { 
+				}
+				catch (@SuppressWarnings("unused") IllegalThreadStateException ex) {
 					// command output
 				}
 				if (expect != null) {
@@ -469,51 +465,52 @@ public class cmdExec {
 				}
 				Thread.sleep(100);
 			}
-			
+
 			proc.destroy();
 			proc.waitFor();
-			
+
 			if (out.equals(""))
 				out = output.forceAllOutput();
-			
-//			String ret = "";
-//			
-//			if (!error.getOutput().equals(""))
-//				ret = error.forceAllOutput();
-//			
-//			ret = output.forceAllOutput();
-			
+
+			// String ret = "";
+			//
+			// if (!error.getOutput().equals(""))
+			// ret = error.forceAllOutput();
+			//
+			// ret = output.forceAllOutput();
+
 			error.stopIt();
 			output.stopIt();
-			
+
 			addStreamRealGobbler(error);
 			addStreamRealGobbler(output);
-			
+
 			error = null;
 			output = null;
-			
+
 			return out;
-			
-		} catch (Exception e) {
+
+		}
+		catch (Exception e) {
 			e.printStackTrace();
-			
+
 			if (error != null) {
 				addStreamRealGobbler(error);
 				error.stopIt();
 				error = null;
 			}
-			
+
 			if (output != null) {
 				addStreamRealGobbler(output);
 				output.stopIt();
 				output = null;
 			}
 			isError = true;
-			
+
 			return "";
 		}
 	}
-	
+
 	/**
 	 * @param command
 	 * @param expect
@@ -524,33 +521,35 @@ public class cmdExec {
 
 		StreamRealGobbler error = null;
 		StreamRealGobbler output = null;
-		try
-		{            
-			String osName = System.getProperty("os.name" );
+		try {
+			String osName = System.getProperty("os.name");
 			Process proc = null;
 
 			if (osName.indexOf("Win") != -1) {
 				proc = Runtime.getRuntime().exec(command);
-			} else if (osName.indexOf("Linux") != -1) {
-				String[] cmd = new String[3];
-				cmd[0] = "/bin/sh";
-				cmd[1] = "-c";
-				cmd[2] = command;
-				proc = Runtime.getRuntime().exec(cmd);
-			} else {
-				isError = true;
-				return null; 
 			}
-			
+			else
+				if (osName.indexOf("Linux") != -1) {
+					String[] cmd = new String[3];
+					cmd[0] = "/bin/sh";
+					cmd[1] = "-c";
+					cmd[2] = command;
+					proc = Runtime.getRuntime().exec(cmd);
+				}
+				else {
+					isError = true;
+					return null;
+				}
+
 			error = getStreamRealGobbler();
 			output = getStreamRealGobbler();
-			
-			error.setInputStream(proc.getErrorStream());            
-			
+
+			error.setInputStream(proc.getErrorStream());
+
 			output.setInputStream(proc.getInputStream());
-			
+
 			String out = "";
-			
+
 			long startTime = new Date().getTime();
 			while (true) {
 				out = error.forceAllOutput();
@@ -559,7 +558,8 @@ public class cmdExec {
 						isError = true;
 						break;
 					}
-				} catch (IllegalThreadStateException ex) {
+				}
+				catch (@SuppressWarnings("unused") IllegalThreadStateException ex) {
 					// ignore
 				}
 				if (expect != null) {
@@ -579,56 +579,57 @@ public class cmdExec {
 				}
 				Thread.sleep(100);
 			}
-			
+
 			proc.destroy();
 			proc.waitFor();
-			
+
 			if (out.equals(""))
 				out = output.forceAllOutput();
-			
-//			String ret = "";
-//			
-//			if (!error.getOutput().equals(""))
-//				ret = error.forceAllOutput();
-//			
-//			ret = output.forceAllOutput();
-			
+
+			// String ret = "";
+			//
+			// if (!error.getOutput().equals(""))
+			// ret = error.forceAllOutput();
+			//
+			// ret = output.forceAllOutput();
+
 			error.stopIt();
 			output.stopIt();
-			
+
 			addStreamRealGobbler(error);
 			addStreamRealGobbler(output);
-			
+
 			error = null;
 			output = null;
-			
+
 			return out;
-			
-		} catch (Exception e) {
+
+		}
+		catch (Exception e) {
 			e.printStackTrace();
-			
+
 			if (error != null) {
 				addStreamRealGobbler(error);
 				error.stopIt();
 				error = null;
 			}
-			
+
 			if (output != null) {
 				addStreamRealGobbler(output);
 				output.stopIt();
 				output = null;
 			}
 			isError = true;
-			
+
 			return "";
 		}
 	}
-	
+
 	/**
 	 * @return stream
 	 */
 	public StreamGobbler getStreamGobbler() {
-		
+
 		synchronized (streams) {
 			if (streams.size() == 0) {
 				StreamGobbler stream = new StreamGobbler(null);
@@ -638,20 +639,20 @@ public class cmdExec {
 			return streams.removeFirst();
 		}
 	}
-	
+
 	/**
 	 * @param stream
 	 */
 	public void addStreamGobbler(StreamGobbler stream) {
-		
+
 		synchronized (streams) {
-		    if (!stopStreams)
-		    	streams.addLast(stream);
-		    else
-		    	stream.stopItForever();
+			if (!stopStreams)
+				streams.addLast(stream);
+			else
+				stream.stopItForever();
 		}
 	}
-	
+
 	/**
 	 * @return stream
 	 */
@@ -665,60 +666,60 @@ public class cmdExec {
 			return streamsReal.removeFirst();
 		}
 	}
-	
+
 	/**
 	 * @param stream
 	 */
 	public void addStreamRealGobbler(StreamRealGobbler stream) {
-		
+
 		synchronized (streamsReal) {
 			if (!stopStreamsReal)
-		    	streamsReal.addLast(stream);
-		    else
-		    	stream.stopItForever();
+				streamsReal.addLast(stream);
+			else
+				stream.stopItForever();
 		}
 	}
-	
+
 	/**
 	 * 
 	 */
 	public void stopIt() {
-		//System.out.println("### cmdExec stopIt streams.size = " + streams.size());
-		synchronized(streams) {
+		// System.out.println("### cmdExec stopIt streams.size = " + streams.size());
+		synchronized (streams) {
 			stopStreams = true;
-			
+
 			while (streams.size() > 0) {
 				StreamGobbler sg = (streams.removeFirst());
 				sg.stopItForever();
 			}
 		}
-		synchronized(streamsReal) {
+		synchronized (streamsReal) {
 			stopStreamsReal = true;
-			
+
 			while (streamsReal.size() > 0) {
 				StreamRealGobbler sg = (streamsReal.removeFirst());
 				sg.stopItForever();
 			}
 		}
 	}
-	
+
 	private static class StreamGobbler extends Thread {
-		
+
 		InputStream is;
 		String output = "";
 		boolean stop = false;
 		boolean stopForever = false;
 		boolean doneReading = false;
-		
+
 		public StreamGobbler(InputStream is) {
-		
+
 			super("Stream Gobler");
 			this.is = is;
 			this.setDaemon(true);
 		}
-		
+
 		public void setInputStream(InputStream is) {
-			
+
 			this.is = is;
 			output = "";
 			stop = false;
@@ -727,65 +728,67 @@ public class cmdExec {
 				notify();
 			}
 		}
-		
+
 		public String getOutput() {
-			
+
 			return output;
 		}
-		
+
 		/**
 		 * @return output
 		 */
 		@SuppressWarnings("unused")
 		public synchronized String forceAllOutput() {
-			
+
 			if (!doneReading)
 				return "";
 			doneReading = false;
 			return output;
 		}
-		
+
 		public void stopIt() {
 			stop = true;
 		}
-		
+
 		public void stopItForever() {
-			synchronized(this) {
+			synchronized (this) {
 				stopForever = true;
 				notify();
 			}
 		}
-		
+
 		@Override
 		public void run() {
-			
+
 			while (true) {
-				
+
 				synchronized (this) {
 					while (is == null && !stopForever) {
 						try {
 							wait();
-						} catch (Exception e) { 
+						}
+						catch (@SuppressWarnings("unused") Exception e) {
 							// ignore
 						}
 					}
 				}
-				
+
 				if (stopForever) {
 					break;
 				}
 				try {
 					InputStreamReader isr = new InputStreamReader(is);
 					BufferedReader br = new BufferedReader(isr);
-					String line=null;
+					String line = null;
 					while (!stop && (line = br.readLine()) != null) {
-						output += line;    
+						output += line;
 					}
 					synchronized (this) {
 						doneReading = true;
 					}
 					is.close();
-				} catch (Exception ioe) {
+				}
+				catch (@SuppressWarnings("unused") Exception ioe) {
 					output = "";
 				}
 				is = null;
@@ -794,22 +797,22 @@ public class cmdExec {
 	}
 
 	private static class StreamRealGobbler extends Thread {
-		
+
 		InputStream is;
 		String output = "";
 		boolean stop = false;
 		boolean doneReading = false;
 		boolean stopForever = false;
-		
+
 		public StreamRealGobbler(InputStream is) {
-			
+
 			super("Stream Real Gobbler");
 			this.is = is;
 			this.setDaemon(true);
 		}
-		
+
 		public void setInputStream(InputStream is) {
-			
+
 			this.is = is;
 			output = "";
 			stop = false;
@@ -818,68 +821,71 @@ public class cmdExec {
 				notify();
 			}
 		}
-		
+
 		/**
 		 * @return output
 		 */
 		@SuppressWarnings("unused")
 		public String getOutput() {
-			
+
 			return output;
 		}
-		
+
 		public synchronized String forceAllOutput() {
-			
+
 			if (!doneReading)
 				return "";
 			return output;
 		}
-		
+
 		public void stopIt() {
 			stop = true;
 		}
-		
+
 		public void stopItForever() {
-			synchronized(this) {
+			synchronized (this) {
 				stopForever = true;
 				notify();
 			}
 		}
+
 		@Override
 		public void run() {
-			
+
 			while (true) {
-				
+
 				synchronized (this) {
 					while (is == null && !stopForever) {
 						try {
 							wait();
-						} catch (Exception e) { 
+						}
+						catch (@SuppressWarnings("unused") Exception e) {
 							// ignore
 						}
 					}
 				}
-				
+
 				if (stopForever) {
 					break;
 				}
-				
+
 				try {
 					InputStreamReader isr = new InputStreamReader(is);
 					BufferedReader br = new BufferedReader(isr);
-					String line=null;
+					String line = null;
 					while (!stop && (line = br.readLine()) != null) {
-						output += line+"\n";    
+						output += line + "\n";
 					}
 					synchronized (this) {
 						doneReading = true;
 					}
-				} catch (Exception ioe) {
+				}
+				catch (@SuppressWarnings("unused") Exception ioe) {
 					output = "";
 				}
 				is = null;
 			}
 		}
 	}
-	
+
 }
